--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -1,6 +1,6 @@
 <h1><%= @message %></h1>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<link rel="stylesheet" type="text/css" href="pro.css">
  <div class="pro-top-wrapper">
     <div class="pro-container">
       <div class="pro-background-image">
