--- a/app/views/users/new.html
+++ b/app/views/users/new.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" type="text/css" href="new.css">
 <div class="first-wrapper">
 <% provide(:title, 'Sign up') %>
 <h1>Seekle、もうすぐ！</h1>
