--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,8 +1,10 @@
 
-
 <h1><%= @message %></h1>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<link rel="stylesheet" type="text/css" href="index.css">
+
 
 
 
