--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -1,3 +1,4 @@
+
 .top-wrapper {
   margin-top: -30px;
     background-size: cover;
@@ -9,10 +10,28 @@
 }
 
 
+
+@media only screen and  ( max-width:640px )
+{
+  /* ボディ */
+  .background-image
+  {
+    float:left;
+  }
+  .top-wrapper{
+    padding: 80px 0 100px 0px;
+  }
+  .top-wrapper h1 {
+   text-shadow: 2px 2px 1px black;
+  }
+}
+
+
 .top-wrapper h1 {
     opacity: 0.9;
     font-size: 45px;
     letter-spacing: 5px;
+    padding-top:20px;
 }
 
 .top-wrapper p {
@@ -49,6 +68,7 @@ form {
     margin: 0px;
     border-bottom: 2px solid rgb(235, 235, 235);
     transition: all 0.5s;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 .wrapper {
@@ -65,38 +85,121 @@ form {
     box-sizing: border-box;
     border-right: 1px solid rgb(235, 235, 235);
     overflow: hidden;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 .jobstyle-row ul li:hover{
-    color:#FFA500;
+    color:gray;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+
+@media screen and  ( max-width:640px )
+{
+
+  .wrapper{
+   width:auto;
+  position:relative;
+  margin-left:-22px;
+    max-width:640px; 
+  }
+
+  .explain-seekle-wrapper p{
+    font-size:9px;
+  }
+
 }
 
 
+.explain-seekle-wrapper
+{
+
+  height:260px;
+  text-align: center;
+background-color: rgb(247, 247, 247);
+}
+
+
+.explain-seekle-wrapper p{
+    font-size:15px;
+    line-height:25px;
+}
+
+.Seekle-heading {
+    padding-top: 40px;
+    padding-bottom: 15px;
+    color: rgb(95, 93, 96);
+}
+.Seekle-heading h2{
+
+margin-top:12px;
+  margin-bottom: -15px;
+}
+.Seekle-heading p{
+  font-size: 15px;
+}
+
+.reason p{
+  text-align: center;
+  text-rendering:optimizeLegibility;
+  width:90%;
+  margin:0 auto;
+}
+
 .about-seekle-wrapper{
-    height:390px;
+    height:270px;
       padding-bottom: 80px;
     background-color: #fff;
     text-align: center;
     font-size:14px;
 }
+
 .about-seekle-wrapper p{
     font-size:15px;
     line-height:25px;
 }
 
-.heading {
-    padding-top: 40px;
-    padding-bottom: 15px;
-    color: rgb(95, 93, 96);
-}
 
 .reason {
     float: left;
     width: 33%;
+    padding-top: 50px;
 }
 
 
+@media screen and  ( max-width:640px )
+{
+
+  .reasons {
+    font-size:60%;
+    clear:both;
+    padding-top: -20px;
+    padding-left:43px;
+
+  }
+  .reason  {
+    display: inline-block;
+    font-size: 10px;
+     line-height:14px;
+      width:90%;
+
+  }
+
+  .about-seekle-wrapper{
+    height:750px;
+
+ }
+
+  
+}
 
 
+@media screen and (max-width:479px)
+{
+
+.about-seekle-wrapper{
+    height:900px;
+
+ }
+}
 
 
 
@@ -128,6 +231,38 @@ form {
     position: relative;
 }
 
+
+
+@media screen and  ( max-width:640px )
+{
+  .lesson-wrapper{
+    height:1130px;
+    
+  }
+  .images{
+    padding-top: 10%;
+
+  }
+
+  .first {  
+  clear:both;
+  padding-left: 12%;
+    }
+
+.how-works-explain{
+  width: 300px;
+  padding-bottom: 20px;
+}
+
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 374px)
+{
+.first{
+padding-left:0px;
+}
+}
 
 
 
@@ -162,4 +297,7 @@ form {
   top: 4px;
   box-shadow: none;
 }
+
+
+
 
