--- a/app/assets/stylesheets/home/pro.css
+++ b/app/assets/stylesheets/home/pro.css
@@ -1,3 +1,19 @@
+
+@media screen and ( max-width:640px )
+{
+
+  .pro-top-wrapper h1 {
+   text-shadow: 2px 2px 1px black;
+
+  }
+
+.pro-top-wrapper {
+  height:230px;
+}
+
+}
+
+
 .pro-top-wrapper {
   margin-top: -30px;
     background-size: cover;
@@ -89,9 +105,23 @@ input, textarea {
 }
 
 
+@media screen and ( max-width:640px )
+{
+
+  .pro-explain-wrapper{
+    height:800px;
+  }
 .All-first{
 
+  width:180%;
 }
+.first{
+  clear:both;
+}
+}
+
+
+
 
 .first-wrapper {
     height: 420px;
