色を黒にした

--- a/app/assets/stylesheets/home/policy.css
+++ b/app/assets/stylesheets/home/policy.css
@@ -3,7 +3,7 @@
    margin:90px;
    border-radius:5px;
    box-shadow:1px 1px 3px #c0c0c0;
-   background-color:#F5F5F5;
+   background-color:black;
 }
 
 .policy-contents{
