--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .container {
-
+    padding-top: 57px;
     margin: 0px auto;
 }
 
@@ -196,8 +196,6 @@ text-decoration:none;
 
 
 
-
-
 /* フッター ================================ */
 
 
@@ -300,6 +298,102 @@ text-decoration: none;
     font-size: 12px;
     padding-bottom: 9px;
 }
+
+/*ユーザーログイン*/
+
+.user_content {
+  width: 500px;
+  height: 100%;
+  margin: auto;
+  background-color: #DCDCDC;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+  font-family:  "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, Meiryo, sans-serif;
+}
+
+.content_in_user{
+  margin: auto;
+  width: 333px;
+  padding-top: 53px;
+  padding-bottom: 30px;
+}
+
+.content_in_user a {
+  color: #483D8B;
+}
+
+.log_button{
+  border-radius: 5px;
+  width: 333px;
+  font-size: 15px;
+  color: #FFFAFA;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  outline: none;
+}
+
+input{
+  transition-duration: 0.4s;
+}
+
+#face{
+  background-color: #001db5;
+}
+
+#face:hover{
+  background-color: #000080;
+}
+
+#login{
+  background-color:#D2691E;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+#login:hover {
+    background-color: #b53e00;
+}
+
+.actions p{
+  text-align: center;
+  height: 20px;
+  margin-top: 0px;
+}
+
+#user_email:focus {
+  outline: none;
+}
+
+#user_password:focus{
+  outline: none;
+}
+
+
+#user_email, #user_password {
+  border: none;
+  border-bottom:solid 1px black;
+  background-color: #DCDCDC;
+  border-radius: 0px;
+  width: 333px;
+  padding-top: 23px;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px #DCDCDC inset;
+}
+
+#pass_for{
+  float: right;
+}
+
+
+hr{
+  margin: 0;
+  margin-top: 10px;
+  width: 100%;
+}
+
 
 
 
