--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -29,24 +29,54 @@
 
 
 
-  <div class="full-block jobstyle-row">
+  <div id="fade-in2" class="dropmenu">
     <div class="wrapper" >
     <ul>
-      <li>住まい</li>
-      <li>イベント</li>
-      <li>習い事</li>
-      <li>健康</li>
-      <li>その他</li>
+      <li><a href="#">住まい</a>
+        <ul>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+        </ul>
+      </li>
+      <li><a href="#">イベント</a>
+        <ul>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+        </ul>
+      </li>
+      <li><a href="#">習い事</a>
+        <ul>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+          <li><a href="#">サブメニュー</a></li>
+        </ul>
+      </li>
+      <li><a href="#">健康</a>
+        <ul>
+            <li><a href="#">サブメニュー</a></li>
+            <li><a href="#">サブメニュー</a></li>
+            <li><a href="#">サブメニュー</a></li>
+        </ul>
+      </li>
+      <li><a href="#">その他</a>
+        <ul>
+            <li><a href="#">サブメニュー</a></li>
+            <li><a href="#">サブメニュー</a></li>
+            <li><a href="#">サブメニュー</a></li>
+          </ul>
+      </li>
     </ul>
     </div>
   </div>
 
 
 <div class="explain-seekle-wrapper">
- <div clas="container">
+ <div class="container">
     <div class="Seekle-heading">
      <h2>Seekleとは？</h2>
-　　　　<p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービスです。</p>
+      <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービスです。</p>
     </div>
   </div>
 </div>
