--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -11,6 +11,7 @@ body {
 
 ul, li {
   list-style-type: none;
+  margin: 0px;
 }
 
 a {
@@ -23,7 +24,7 @@ a:hover {
   color: #1b7ccd;
 }
 
-.container {
+.main_content {
     padding-top: 57px;
     margin: 0px auto;
 }
@@ -394,7 +395,74 @@ hr{
   width: 100%;
 }
 
+/*ドロップダウン*/
+.dropmenu{
+  *zoom: 1;
+  list-style-type: none;
+  width: 960px;
+  margin: auto;
+  padding: 0;
+}
+.dropmenu:before, .dropmenu:after{
+  content: "";
+  display: table;
+}
+.dropmenu:after{
+  clear: both;
+}
+.dropmenu li{
+  position: relative;
+  width: 20%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.dropmenu li a{
+  display: block;
+  margin: 0;
+  padding: 15px 0 11px;
+  background: white;
+  color: black;
+  font-size: 16px;
+  text-decoration: none;
+}
 
+.dropmenu li ul{
+  list-style: none;
+  position: absolute;
+  z-index: 9999;
+  top: 100%;
+  left: 0;
+  margin: 0;
+  padding: 0;
+}
+.dropmenu li ul li{
+  width: 100%;
+}
+.dropmenu li ul li a{
+  padding: 13px 15px;
+  border-top: 1px solid #F5F5F5;
+  background: white;
+  text-align: left;
+}
+.dropmenu li:hover > a{
+  background: #FFA500;
+}
+.dropmenu li a:hover{
+  background: #FFA500;
+}
 
+#fade-in2 li ul{
+  opacity: 0;
+  top: 50%;
+  visibility: hidden;
+  transition: .5s;
+}
 
+#fade-in2 li:hover ul{
+  top: 100%;
+  visibility: visible;
+  opacity: 1;
+}
 
