--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -4,15 +4,18 @@
     background-size: cover;
     color: white;
     background-image: url("https://static.pexels.com/photos/6182/man-hands-photographer-cameras.jpg");
-    text-align: center;   
+    text-align: center;
     padding: 150px 0 130px 0px;
-
+    position: relative;
 }
 
 
 
 @media only screen and  ( max-width:640px )
 {
+  .body{
+    position: relative;
+  }
   /* ボディ */
   .background-image
   {
@@ -73,9 +76,9 @@ form {
 
 .wrapper {
     width: 900px;
-    position: relative;
     margin: 0px auto;
 }
+
 .jobstyle-row ul li {
     text-transform: uppercase;
     font-size: 14px;
@@ -83,10 +86,12 @@ form {
     width: 20%;
     float: left;
     box-sizing: border-box;
-    border-right: 1px solid rgb(235, 235, 235);
     overflow: hidden;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
+
+
+
 .jobstyle-row ul li:hover{
     color:gray;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
@@ -99,7 +104,7 @@ form {
    width:auto;
   position:relative;
   margin-left:-22px;
-    max-width:640px; 
+    max-width:640px;
   }
 
   .explain-seekle-wrapper p{
@@ -111,7 +116,6 @@ form {
 
 .explain-seekle-wrapper
 {
-
   height:260px;
   text-align: center;
 background-color: rgb(247, 247, 247);
@@ -188,7 +192,7 @@ margin-top:12px;
 
  }
 
-  
+
 }
 
 
@@ -237,14 +241,14 @@ margin-top:12px;
 {
   .lesson-wrapper{
     height:1130px;
-    
+
   }
   .images{
     padding-top: 10%;
 
   }
 
-  .first {  
+  .first {
   clear:both;
   padding-left: 12%;
     }
