--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -20,7 +20,7 @@
       <p>シェアリングエコノミーの未来を切り開く</p>
 
 
-     <%= link_to "事前登録する", new_user_path, class: "btn btn-lg btn-primary" %>
+     <%= link_to "事前登録する", new_user_session_path, class: "btn btn-lg btn-primary" %>
 
     </div>
 
