--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -10,7 +10,7 @@
      <p>会社を作らなくてもビジネスはもっと身近に始められる</p>
 
 
-      <%= link_to "事前登録する", new_user_path, class: "btn btn-lg btn-primary" %>
+      <%= link_to "事前登録する", new_user_session_path, class: "btn btn-lg btn-primary" %>
     </div>
   </div>
 
@@ -19,36 +19,36 @@
     <div class="pro-container">
  <div class="heading">
         <h2>プロバイダーとして活躍しませんか</h2>
-        
+
 
       </div>
       <div class="All-first">
 
         <div class="first">
-          
+
           <p class="txt-contents"></p><h3>スキマ時間活用</h3>
 <p>子供を送り出した後の空いている時間、仕事帰り、など<br>人それぞれのスキマ時間にプロバイダーとして活動することで<br>副業としてもSeekleは活躍します。</p>
         </div>
 
         <div class="first">
-      
+
           <p class="txt-contents"></p><h3>個人経営の方も</h3>
 
 <p>Seekleは個人経営の方のための広告塔としても<br>利用できます。地域で個人教室を開いてる方など、<br>生徒集めに無料で掲載してみませんか？</p>
         </div>
 
         <div class="first">
-         
+
           <p class="txt-contents"></p><h3>好きな仕事をしたい！</h3>
 <p>"自分はこんな資格持っているのに、普段の生活で<br>使うことがない"。 例えば、"家に人を呼んで料理教室を<br>始めたいな" と、考えた経験はありませんか？<br>Seekleはあなたのスキルを他の人に共有できる機会を作ります。</p>
         </div>
 
- 
+
 
       </div>
 
 
-      
+
     </div>
   </div>
 
@@ -61,7 +61,7 @@
         <h2>あなたも得意を仕事にしませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
- <%= link_to "プロバイダーとして参加", new_user_path, class: "btn message signup-show" %>
+ <%= link_to "プロバイダーとして参加", new_user_session_path, class: "btn message signup-show" %>
     </div>
   </div>
 
