--- a/app/views/housing/index.html.erb
+++ b/app/views/housing/index.html.erb
@@ -20,32 +20,23 @@
    <div class="top_home_page">
 
 
-       <a img="https://pixabay.com/static/uploads/photo/2014/07/05/10/30/tool-384740_960_720.jpg">
-       </a>
+<%= image_tag("tool-seekle.png",class: 'top_home_page') %>
+
 
     <h1>住まい</h1>
      <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
+
+
    </div>
 
       <div class="home_pictures_wrapper">
         <h1>人気のカテゴリー</h1>
         <div class="home_pictures">
 
-           <div class="pic">
-               <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="260" height="200" border="0" />
-            </div>
-
-         <div class="pic">
-             <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="260" height="200" border="0" />
-        </div>
-
- <div class="pic">
-             <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="260" height="200" border="0" />
-        </div>
-
-        <div class="pic">
-                <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="260" height="200" border="0" />
-        </div>
+<%= image_tag("computer.png",class: 'pic' , size: '260x200') %>
+<%= image_tag("computer.png",class: 'pic' , size: '260x200') %>
+<%= image_tag("computer.png",class: 'pic' , size: '260x200') %>
+<%= image_tag("computer.png",class: 'pic' , size: '260x200') %>
       </div>
   </div>
   </div>
@@ -100,8 +91,8 @@
 
  <div class="home-story">
    <div class= "main-story">
-    <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="270" height="360" border="0" />
 
+<%= image_tag("computer.png", size: '270x360') %>
    </div>
 
  <div class="about-story">
@@ -109,7 +100,7 @@
      </div>
 
     <div class="second-story">
-    <img src="https://pixabay.com/static/uploads/photo/2016/02/07/21/11/computer-1185637_960_720.jpg" alt="First" width="190" height="190" border="0" />
+    <%= image_tag("computer.png", size: '190x190') %>
  </div>
 
    <div class="about-story-second">
