--- a/app/assets/stylesheets/housing.scss
+++ b/app/assets/stylesheets/housing.scss
@@ -8,7 +8,7 @@
 
     height: 36px;
     cursor: pointer;
-    margin: 0px;
+    margin-top: -36px;
     border-bottom: 2px solid rgb(235, 235, 235);
     transition: all 0.5s;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
@@ -60,8 +60,6 @@ margin-right: 730px;
 }
 
 .home_pictures_wrapper {
-  padding-top: 30px;
-
   text-align: center;
 
 }
