--- a/app/assets/stylesheets/housing.scss
+++ b/app/assets/stylesheets/housing.scss
@@ -199,8 +199,83 @@ height:620px;
 .more-detail h2{
   float:left;
   padding-top: 140px;
+}
 
+.clearfix:after{
+  content: "";
+  display: block;
+  clear: both;
+}
 
+.genre{
+  width: 100%;
+  height: 40px;
+  background-color: whitesmoke;
+  p{
+    margin-left: 20px;
+    margin-top: 0;
+  }
+}
+
+.create_requirement{
+  margin-top: 10px;
+  margin-left: 20px;
+  .date, .gender, .price {
+    margin-top: 10px;
+    border-bottom: 1px solid #D3D3D3;
+  }
+  .date_content, .gender_content{
+    margin-left: 30px;
+  }
+}
+
+.provider_job{
+  height: 300px;
+  border: 1px solid whitesmoke;
+  width: 250px;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  float: left;
+  &:hover{
+    border: 1px solid #D3D3D3;
+    background-color: white;
+  }
+  .provider_image{
+    border-radius: 100px;
+    background-color: black;
+    float: left;
+  }
+  h5{
+    float: left;
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  .provider_rewards{
+    background-color: black;
+    float: right;
+  }
+  .title{
+    clear: both;
+    display: block;
+    font-size: 30px;
+    padding-top: 20px;
+  }
+  h2{
+    bottom: 0;
+    position: absolute;
+    letter-spacing: 5px;
+    background-color: #FFA500;
+    color: white;
+  }
+}
+
+.show_providers{
+  margin-top: 50px;
+  margin-bottom: 30px;
+  padding-top: 20px;
+  background-color: whitesmoke;
 }
 
 
@@ -209,4 +284,33 @@ height:620px;
   content: "";
   display: block;
   clear: both;
+}
+
+/*範囲スライダー*/
+
+#the_slider{
+  margin-bottom: 100px;
+  input{
+    margin-top: 50px;
+  }
+}
+
+.ui-slider-handle.ui-state-default.ui-corner-all{
+  border-radius: 100px;
+}
+
+.ui-widget-header {
+  background: #FF9E00!important;
+}
+
+.ui-slider-horizontal{
+  height: 3px!important;
+}
+
+.ui-slider-horizontal .ui-slider-handle{
+  top: -12px!important;
+}
+
+.ui-slider{
+  width: 1000px;
 }
