タイトルかえた

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -13,7 +13,7 @@
        <a img="https://static.pexels.com/photos/7075/people-office-group-team.jpg">
        </a>
      </div>
-      <h1>人と繋がる、これからの新しい暮らし方</h1>
+      <h1>登録費無料の簡単サービス依頼</h1>
 
       <p>簡単にあなたの求めるサービスを依頼</p>
 
