--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
  <div class="upper-menu">
     <div class="wrapper" >
     <ul>
-     <li><a href='/users/index'>マイページ</a></li>
+     <li><a href='/users'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
      <li><a href='/dashboard/transaction'>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
@@ -13,22 +13,6 @@
     </div>
   </div>
   </div>
-
-
-
-<div class="setting-left-heading">
-<p>一般設定</p>
-
- <ul>
-   <li> <a href="/settings/new"><i class="fa fa-plus-square-o"></i> マイページ設定</a></li>
-   <li> <a href="#"><i class="fa fa-plus-square-o"></i>  アカウント</a></li>
-   <li><a href="/service_setting/pictures"><i class="fa fa-plus-square-o"></i>  セキュリティー</a></li>
-   <li><i class="fa fa-plus-square-o"></i>  支払い/受け取り</li>
-
-
-  </ul>
-  </div>
-
 
 
 
