--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,7 +1,8 @@
+
+<link rel="stylesheet" href="index.css"  type="text/css" >
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-
-<link rel="stylesheet" type="text/css" href="index.css">
 
 
 
@@ -30,7 +31,12 @@
 
     </div>
 
+
+
+
+
     </div>
+
 
 
 
@@ -59,17 +65,21 @@
   </div>
 
 
+
+
+
 <div class="explain-seekle-wrapper">
  <div class="container">
     <div class="Seekle-heading">
      <h2>これからのあなたの新しい暮らしかた</h2>
-      <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービスです。</p>
+      <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービです。</p>
     </div>
   </div>
 </div>
 
 
 <div class="about-seekle-wrapper">
+
    <div class="container">
      <div class="reasons">
        <div class="reason">
