--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -6,12 +6,9 @@
 <a img="https://pixabay.com/static/uploads/photo/2015/06/08/15/06/woman-801872_960_720.jpg">
        </a>
      </div>
-      <h1>こんなビジネス始めてみたい。</h1>
-<<<<<<< HEAD
-     <p>ビジネスはもっと身近に始めよう</p>
-=======
+      <h1>こんなビジネスを始めてみたい。</h1>
+
      <p>ビジネスをもっと身近に始めよう</p>
->>>>>>> responsive_seekle
 
       <% if user_signed_in? %>
       <div class="bootstrap">
