app入れ替え変更

--- a/app/assets/stylesheets/dashboard/listing.css.scss
+++ b/app/assets/stylesheets/dashboard/listing.css.scss
@@ -71,11 +71,14 @@ margin-top: 50px;
 .service_image{
 
 height: 100px;
-width:150px;
+width:170px;
 margin-top: 16px;
 margin-left: 20px;
 }
 
+ .panel-heading{
+  height:40px;
+ }
 
 
 
