--- a/app/views/home/guide.html
+++ b/app/views/home/guide.html
@@ -22,7 +22,7 @@
  <h2>2.あなたにあったプロバイダーを決めよう</h2>
 <i class="fa fa-users fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
+  <p>サービス価格、内容、場所など様々な情報をみて、あなたにぴったりなプロバイダー<br>を決めましょう。（プロバイダー ＝ 各サービスの提供者）</p>
 
 
 
@@ -42,7 +42,7 @@
  <h2>3.プロバイダーと連絡をとろう</h2>
 <i class="fa fa-envelope-o fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
+  <p>プロバイダーが決まれば当日の詳細を連絡しあい、サービス料金をプロバイダーにお支払いください。</p>
 
  </div>
 
@@ -53,13 +53,8 @@
  <h2>4.サービスを受けよう！</h2>
 <i class="fa fa-child fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
+  <p>あとはサービスを受けるだけ！当日のお金のやりとりは一切不必要。</p>
 
  </div>
-
-
-
-
-
-
   </div>
+
