--- a/app/views/housing/lesson.html.erb
+++ b/app/views/housing/lesson.html.erb
@@ -13,17 +13,21 @@
   </div>
   </div>
 
+
+
 <div class="home-all-wrapper">
 
 <div class="home-little clearfix">
    <div class="top_home_page">
 
 
-    <h1>住まい</h1>
-     <h3>暮らしを変えるSeekleでの住まいサービス</h3>
+    <h1>習い事</h1>
+     <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
 
 
    </div>
+
+
 
   <div class="home-category-wrapper">
 
@@ -39,22 +43,9 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "歌","/notes/search" %></h3>
   </div>
-      <div class="panel-body-housing-90">
-
-      </div>
-    </div>
-  </li>
-  </div>
-
-
-<div class="bootstrap">
-   <li><div class="panel panel-default">
-   <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "増設、リモデル","/notes/search" %></h3>
-  </div>
-        <div class="panel-body-housing-91">
+      <div class="panel-body-housing-40">
 
       </div>
     </div>
@@ -63,12 +54,27 @@
 
 
 
+
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "コンクリート","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "語学","/notes/search" %></h3>
+  </div>
+        <div class="panel-body-housing-41">
+
+      </div>
+    </div>
+  </li>
+  </div>
+
+
+
+<div class="bootstrap">
+   <li><div class="panel panel-default">
+   <div class="panel-heading">
+     <h3 class="panel-title"><%= link_to "ピアノ","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-92">
+        <div class="panel-body-housing-42">
 
       </div>
     </div>
@@ -79,9 +85,9 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-   <h3 class="panel-title"><%= link_to "ペインティング","/notes/search" %></h3>
+   <h3 class="panel-title"><%= link_to "武道","/notes/search" %></h3>
  </div>
-        <div class="panel-body-housing-93">
+        <div class="panel-body-housing-43">
 
       </div>
     </div>
@@ -93,9 +99,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "屋根、雨漏り","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ヨガ","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-94">
+       <div class="panel-body-housing-44">
 
       </div>
     </div>
@@ -106,9 +112,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "壁、階段、フレーミング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ダンス","/notes/search" %></h3>
      </div>
-   <div class="panel-body-housing-95">
+   <div class="panel-body-housing-45">
 
       </div>
     </div>
@@ -120,9 +126,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ドア、窓","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "勉学","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-96">
+        <div class="panel-body-housing-46">
 
       </div>
     </div>
@@ -136,9 +142,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "クリーニング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "絵","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-97">
+        <div class="panel-body-housing-47">
 
       </div>
     </div>
@@ -148,9 +154,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "引っ越し","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "パーソナルトレーニング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-98">
+        <div class="panel-body-housing-48">
 
       </div>
     </div>
@@ -160,9 +166,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "大工、木工","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "編み物","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-99">
+       <div class="panel-body-housing-49">
 
       </div>
     </div>
@@ -172,9 +178,9 @@
     <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "配管工事","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "料理","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-100">
+       <div class="panel-body-housing-50">
 
       </div>
     </div>
@@ -188,7 +194,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-101">
+        <div class="panel-body-housing-51">
 
       </div>
     </div>
@@ -197,9 +203,8 @@
   </div>
 
 
+
+
+
   </div>
  </div>
-
-
-
-
