--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,21 +1,10 @@
 
 <div class="genre">
  <div class="bootstrap1">
-  <ol class="breadcrumb">
-  <% if current_user?(@note.user) %>
-  <%= link_to '編集する', edit_note_path(@note) %>  |
-  <%= link_to '掲載中サービス一覧へ', notes_path(@note) %>
- <% end %>
-  </ol>
+
  </div>
 </div>
 
-
-<div class=""> </div>
-  <div class="">
-  </div>
-  <div class=""
->
 
 
 <div class="provider_wrapper">
@@ -25,8 +14,18 @@
  <h1><i class="fa fa-jpy "></i> <%= @note.price %>/月</h1>
   </div>
 
-  <div class="service_order_btn"><h4>このサービスを依頼</h4></div>
+  <div class="service_order_btn"><div id="like-link">
+  <%= render "likes/like_links", note: @note %>
+</div>
+
+<div>
+  <small>
+    <%= link_to @note.likes.count(@note.id), id: "like-count" %>人がキープしています。
+
+  </small>
+</div></div>
   </div>
+
 
 
 <div class="provider-introduction">
@@ -41,7 +40,7 @@
 <h2>このサービスについて</h2>
   <p>  <%= @note.content %></p>
 
-  <h3>もっと詳しく</h3>
+
   </div>
 
 
