--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -33,7 +33,7 @@
 
 
 
-  <a href="/"><%= image_tag('logo.png',class: 'logo')  %></a>
+  <a href="/"><%= image_tag('seeklelogo.png',class: 'logo')  %></a>
 
 
 
