ダッシュボードをダッシュボド

--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -39,7 +39,7 @@
 
     <ul class="header-right">
   <% if user_signed_in? %>
-  <li> <%= link_to 'ダッシュボード', users_path %></li>
+  <li> <%= link_to 'ダッシュボド', users_path %></li>
      <li> <%= link_to 'サービスを掲載',home_pro_path %></li>
   <li> <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
 
