--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
 <div class="left-wrapper">
 
 <div class="mypage-picture">
-<%= image_for(@user) %>
+<%= current_user.profile_pic %>
  </div>
 
 
@@ -38,6 +38,8 @@
 </ul>
 
   </div>
+
+
 
 
 
@@ -70,7 +72,9 @@
 
  <h3>所在地： <%= current_user.area %> </h3>
 
- <h3>自己紹介：</h3> <p><%=current_user.profile %>
+ <h3>自己紹介：</h3> <p>シアトル、バンクーバーで英語を学びました。大手英会話学校大人校にて７年、英会話を教えました。ABCから始める初心者の方を担当し、５年後には子供校英会話教師になられるまで上達された生徒さんもおられました。今は企業や大学でも教えています。学校にて学んだ英語より英会話はもっと楽しく、ある意味コツさえつかめば簡単にコミュニケーションツールとしての英語をマスターすることが出来ます。
+
+英語耳を養うこと、完璧な文のなかで単語力をつけていくことが上達の鍵です。英語が苦手な方を英語好きにするのには自信があります！是非一緒に英会話の学習を始めましょう！<%=current_user.profile %>
 </p>
 
   <h3>お気に入り一覧</h3>
@@ -81,6 +85,7 @@
 
 </ul>
   </div>
+
 
 
 
