notes wizard 形式の変更

--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,7 +1,7 @@
 <li>
 
   <span class="user-name">
-    <%= note.user.profile_pic %>
+    <%= note.user.image %>
   </span>
 
   <span class="user-name">
