--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
 <br />
 
 <div class="field">
- <%= f.label :プロフィール画像 %><br />
+ <%= f.label :プロフィール写真 %><br />
 <%= f.file_field :image, class: "form-control image-field" %>
   </div>
 
