--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -4,7 +4,7 @@
  <div class="upper-menu">
     <div class="wrapper" >
     <ul>
-     <li><a href='/users'>マイページ</a></li>
+     <li><a href='/users/profile'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
      <li><a href='/dashboard/transaction'>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
@@ -17,12 +17,11 @@
   </div>
 
 
-
 <div class="mypage-all_wrapper">
 <div class="left-wrapper">
 
 <div class="mypage-picture">
-<%= image_for(@user) %>
+<%= current_user.profile_pic %>
  </div>
 
 
@@ -33,14 +32,11 @@
    <div class="profilelink">
 <ul class="nav nav-pills">
 
-
+  <li role="presentation" ><a href="/users/profile">プロフィールを見る</a></li>
  <li role="presentation" ><a href="/users/edit">プロフィールを編集</a></li>
 </ul>
 
   </div>
-
-
-
 
 
  <!-- Large button group -->
@@ -68,22 +64,39 @@
 
 
 
- <h1><%= current_user.user_name %>さんのページ</h1>
 
- <h3>所在地： <%= current_user.area %> </h3>
+<div class="bootstrap1">
+<div class="list-group">
+  <a href="#" class="list-group-item disabled">
+    通知
+  </a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+</div>
+</div>
 
- <h3>自己紹介：</h3> <p><%=current_user.profile %>
-</p>
 
-  <h3>お気に入り一覧</h3>
+<div class="bootstrap1">
+<div class="list-group">
+  <a href="#" class="list-group-item disabled">
+    新着メッセージ かれんだー希望
+  </a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+  <a href="#" class="list-group-item">つうちが一件あります</a>
+</div>
+</div>
 
 
-<ul class="notes">
 
 
-</ul>
+
   </div>
 
+  </div>
 
 
 
