--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -19,8 +19,9 @@
       <p>簡単にあなたの求めるサービスを依頼</p>
 
 
+
   <% if user_signed_in? %>
- <div class="bootstrap"><%= link_to "ご利用の流れ", '/home/guide', class: "btn btn-lg btn-primary" %></div>
+ <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
    <% else %>
 
 <div class="bootstrap">
