--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -24,6 +24,7 @@
  <div class="bootstrap"><%= link_to "プロバイダーとして参加", 'http://goo.gl/forms/y9P0l9bh5OFkPs1J3', class: "btn btn-lg btn-primary" %></div>
    <% else %>
 
+
 <div class="bootstrap">
      <%= link_to "アカウントを作成する", new_user_registration_path, class: "btn btn-lg btn-primary" %>
    </div>
@@ -174,9 +175,14 @@
         <h2>あなたもプロバイダーとして参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
+      <div class="join-button">
       <%= link_to "プロバイダーとして参加",'/home/pro', class: "btn message signup-show" %>
     </div>
+    </div>
   </div>
+
+
+
 
 
 
