--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -62,6 +62,10 @@
   }
   .top-wrapper h1 {
    text-shadow: 2px 2px 1px black;
+   width:80%;
+   font-size: 35px;
+   line-height: 50px;
+   padding-left: 40px;
   }
 
 .message-wrapper{
@@ -78,4 +82,5 @@
 
 
 }
+
 
