--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -16,7 +16,7 @@
      </div>
       <h1>登録費無料の簡単サービス依頼</h1>
 
-      <p>簡単にあなたの求めるサービスを依頼</p>
+      <p>あなたの求める全てのサービスがここに集まります</p>
 
 
 
@@ -97,8 +97,8 @@
        <div class="icons">
           <i class="fa fa-money fa-5x"></i>
         </div>
-        <p class="txt-contents"></p><h2>お手頃な費用で貴重な経験</h2>
-<p>高いお金を払って専門のプロに頼む前に、あなたの周りで求めるサービスを提供するプロバイダーを探すことができます。 </p>
+        <p class="txt-contents"></p><h2>お手頃な費用</h2>
+<p>高いお金を払って専門のプロ、業者に頼む前に、あなたの周りで求めるサービスを提供するプロバイダーを探すことができます。 </p>
         </div>
   </div>
 
@@ -108,7 +108,7 @@
        <i class="fa fa-smile-o fa-5x"></i>
      </div>
         <p class="txt-contents"></p><h2>豊富なジャンル</h2>
-<p>カメラマン、英会話教室、ペットのしつけを頼みたいなど、Seekleは様々なジャンルのプロバイダーと繋がることのできる場です。</p>
+<p>カメラマン、英会話教室、ペットのしつけを頼みたいなど、Seekleは様々なジャンルのプロバイダーを見つけることのできる場です。</p>
         </div>
   </div>
   </div>
