--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,11 +49,13 @@
   </div>
 
 
+
 <div class="field">
  <%= f.label :自己紹介 %><br />
-    <%= f.text_area :profile, autofocus: true %>
+    <%= f.text_area :profile, autofocus: true, class: 'profile_field' %>
 
   </div>
+
 
   <div class="field">
     <%= f.label :メールアドレス %><br />
